# apifuzz

./: .gitignore  Cargo.toml  LICENSE  README.md  fuzz-results.schema.json  openapi-node.json
.github/workflows/: ci.yml
crates/apifuzz-cli/: Cargo.toml
crates/apifuzz-cli/docs/: GUIDE.md
crates/apifuzz-cli/src/: main.rs  storage.rs
crates/apifuzz-core/: Cargo.toml
crates/apifuzz-core/src/: config.rs  convert.rs  dryrun.rs  dump.rs  generator.rs  lib.rs  schema.rs  status.rs
crates/apifuzz-core/src/verdict/: failure.rs  mod.rs  policy.rs  severity.rs
crates/apifuzz-core/tests/: generate_schema.rs
crates/apifuzz-runner/: Cargo.toml
crates/apifuzz-runner/src/: datagen.rs  lib.rs
crates/apifuzz-runner/src/native/: checks.rs  mod.rs  phases.rs  spec.rs
docs/: GUIDE.md
examples/node-server/: apifuzz-boundary.toml  apifuzz-heavy.toml  apifuzz-probes.toml  apifuzz-timeout.toml  apifuzz.toml
examples/python-server/: apifuzz-heavy.toml  apifuzz.toml  main.py  openapi.json
test-server-node/: package-lock.json  package.json  server.js
