[workspace]
resolver = "2"
members = [
    "crates/apifuzz-core",
    "crates/apifuzz-cli",
    "crates/apifuzz-runner",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["apifuzz contributors"]
readme = "README.md"
repository = "https://github.com/ynishi/apifuzz"
homepage = "https://github.com/ynishi/apifuzz"
keywords = ["api", "fuzzing", "openapi", "testing", "security"]
categories = ["development-tools::testing", "web-programming"]

[workspace.dependencies]
# Core
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# CLI
clap = { version = "4", features = ["derive"] }
toml = "0.8"

# HTTP/Random
reqwest = { version = "0.12", features = ["blocking", "json"] }
rand = { version = "0.8", features = ["small_rng"] }

# Validation
jsonschema = "0.41"
serde_yml = "0.0.12"

# Testing
insta = { version = "1", features = ["yaml"] }
proptest = "1"
tempfile = "3"

# Internal
apifuzz-core = { path = "crates/apifuzz-core", version = "0.1.1" }
apifuzz-runner = { path = "crates/apifuzz-runner", version = "0.1.1" }
