[package]
name = "apifuzz"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Robust API fuzzing CLI with strict failure detection"
license.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "apifuzz"
path = "src/main.rs"

[dependencies]
apifuzz-core.workspace = true
apifuzz-runner.workspace = true
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
toml.workspace = true
