[package]
name = "apifuzz-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core types and verdict logic for API fuzzing"
license.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
toml.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
