[package]
name = "apifuzz-runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Pure Rust API fuzz runner"
license.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
apifuzz-core.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
rand.workspace = true
jsonschema.workspace = true

[dev-dependencies]
insta.workspace = true
